[gd_scene load_steps=3 format=2]

[ext_resource path="res://scene/state/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://img/menu/title.png" type="Texture" id=2]

[node name="MainMenu" type="MarginContainer"]
margin_right = 800.0
margin_bottom = 500.0
custom_constants/margin_right = 48
custom_constants/margin_top = 40
custom_constants/margin_left = 48
custom_constants/margin_bottom = 40
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 48.0
margin_top = 40.0
margin_right = 752.0
margin_bottom = 460.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 704.0
margin_bottom = 249.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 4

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
margin_top = 253.0
margin_right = 704.0
margin_bottom = 273.0
text = "New Game"

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
margin_top = 277.0
margin_right = 704.0
margin_bottom = 297.0
text = "Load Game"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 301.0
margin_right = 704.0
margin_bottom = 321.0
text = "Options"

[node name="VersionLabel" type="Label" parent="VBoxContainer"]
margin_top = 406.0
margin_right = 704.0
margin_bottom = 420.0
size_flags_vertical = 10
text = "Version Beta-0.0.0"
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="new_game"]
[connection signal="pressed" from="VBoxContainer/LoadGameButton" to="." method="load_game"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="show_options"]
